40-ingress/jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: suite
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: suite-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - secretName: suite-home-arpa-tls
      hosts: ["jenkins.suite.home.arpa"]
  rules:
    - host: jenkins.suite.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: jenkins, port: { number: 8080 } }
