40-ingress/pihole-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ui
  namespace: suite
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: suite-suite-allow-lan@kubernetescrd,suite-suite-security-headers@kubernetescrd,suite-suite-compress@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.suite.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: pihole, port: { number: 80 } } }
